Feat: 레이블 옆 빨간색 별 추가

--- a/src/pages/AuthPage/join/join.css
+++ b/src/pages/AuthPage/join/join.css
@@ -23,6 +23,11 @@ hr {
     border-color: rgb(82, 82, 82);
 }
 
+/* 별 빨간색 */
+.star{
+    color: #DD7474;
+}
+
 /*               input               */
 .input-line {
     margin-top: 30px;
