--- a/src/pages/DiaryPage/diary_right.css
+++ b/src/pages/DiaryPage/diary_right.css
@@ -48,12 +48,15 @@
 /* 일기 제목 내용 부분 css */
 
 .diary-title {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 5px 0;
 }
 
 .diary-content {
-    /* display: flex; */
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 5px 0;
 }
@@ -77,15 +80,6 @@
     justify-content: center;
     margin: 5px 0;
 }
-
-/* .preview {
-    display: none;
-    position: absolute;
-    left: 0;
-    height: 0;
-    width: 100%;
-    height: 100%;
-} */
 
 .image-div {
     margin: 10px 10px;
